# bitcli

./: Cargo.toml  README.md
src/: main.rs  wallet.rs
