[package]
name = "bitcli"
author = "mani"
version = "0.1.0"
edition = "2021"
description = "A simple CLI-based Bitcoin wallet written in Rust to handle all the basic Bitcoin operations."
repository = "https://github.com/ManiReddyt/bitcoin-cli"
license = "MIT"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
dotenv = "0.15.0"
bitcoin = "0.32.5"
bip39 = "2.1.0"
dirs-next = "2.0.0"
indicatif = "0.17.9"
rand = "0.8"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
hex = "0.4.3"
